tests/ui/parser/missing-struct-issue-125446.stderr
error: missing `struct` for struct definition
  --> $DIR/missing-struct-issue-125446.rs:1:1
   |
LL | Whoops {
   | ^^^^^^
   |
help: add `struct` here to parse `Whoops` as a struct
   |
LL | struct Whoops {
   | ++++++

error: aborting due to 1 previous error

