tests/ui/parser/missing-struct-issue-125446.rs
Whoops {
//~^ ERROR missing `struct` for struct definition
//~| HELP add `struct` here to parse `Whoops` as a struct
    value: u64,
}
